...
        app:layout_constraintBottom_toTopOf="@+id/linearLayout">

    </TextView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_marginEnd="15dp"

        android:backgroundTint="#FFFFFF"
...
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingBottom="15dp">

                <TextView
                    android:id="@+id/name_card_text"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:paddingStart="15dp"
                    android:paddingLeft="10dp"
                    android:paddingTop="15dp"
                    android:text="Caroline"
...
